--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,13 @@
     <color name="splashbg">#F0ECE3</color>
     <color name="yellow">#BB4444</color>
 
+
+        <color name="background_color">#FAF9F6</color>
+        <color name="step_text_color">#6D6D6D</color>
+        <color name="text_color">#000000</color>
+        <color name="input_text_color">#000000</color>
+        <color name="button_color">#8FCB9B</color>
+        <color name="progress_color">#66BB6A</color>
+        <color name="progress_background_color">#E0E0E0</color>
+
 </resources>
