--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="#3B9B37"/>
-            <corners android:radius="8dp"/>
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <solid android:color="#48C542"/>
-            <corners android:radius="8dp"/>
-        </shape>
-    </item>
-</selector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#9DCDA2"/>
+    <corners android:radius="32dp"/>
+    <size android:height="20dp"
+        android:width="100dp"/>
+</shape>
